# citations

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  CONTRIBUTING.md  DATA_COLLECTION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  citations-blog-post.md  docker-compose.yml  product_idea.md  prototyping_gols.md  setup.sh
SPECS/: Brand.md  DesignImprovements-Part1.md
api/: .env.example  .gitignore  DATABASE.md  Dockerfile  FEED_API.md  package.json  test-feed-endpoint.sh
api/src/: index.js
api/src/controllers/: feedController.js  papersController.js  subscribeController.js  trendingController.js
backend/scraper/: .env.example  .flake8  .gitignore  AGENTIC_FETCHER_FIXED.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_WORKFLOW.md  README.md  RUN_SCRAPER.md  __init__.py  agentic_paper_fetcher.py  arxiv_client.py  config.py  db_connection.py  deduplication.py  fetch_and_process_20.py  fetch_and_process_simple.py  fetch_papers.py  integrated_scraper.py  main.py  paper_processing_workflow.py  process_papers.py  pyproject.toml  requirements.txt  run_pipeline.py  run_scraper.py  scraper.py  setup.sh  test_scraper.py  test_scraper_simple.py  test_workflow.py  test_workflow_result_20251001_223145.json  test_workflow_result_20251003_110852.json  test_workflow_result_20251003_112914.json
frontend/: .env.example  .gitignore  COMPONENTS.md  Dockerfile  INFINITE_SCROLL_IMPLEMENTATION.md  README.md  index.html  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  main.jsx
(+44 files in other folders)
