[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "google-generativeai>=0.8.5",
    "groq>=0.32.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.77",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.8",
    "paper-search-mcp>=0.1.3",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]
